# Marcas-CardioMetabolismo

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard_light__17_.html  dermato_ddd.html  docker-compose.yml  index (11).html  index (2).html  index (5).html  index.html  kpis.html  kpis.json  provincias.html  psq_dashboard.html  psq_ddd.html
.claude/: launch.json
ATB/: build-data.ps1  data.js  export.js  index.html
OTC/: build-data.ps1  data.js  export.js  index.html
SNC/: bonos-pap.html  index.html  psq_dashboard.html
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_new_file_types.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  cardio.py  ddd.py
backend/app/routers/: agreements.py  brands.py  budget.py  channels.py  ddd.py  kpis.py  market.py  prescriptions.py  prices.py  stock.py
backend/app/schemas/: cardio.py  ddd.py
cardio/: bonos-pap.html  build-data.ps1  data.js  export.js  index.html  runtime-overrides.js
dermatologia/: competidores-data.js  competidores.html  dermato_dashboard.html  dermato_ddd.html  index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
hub/: index.html
mujer/: build-data.ps1  build-market-overrides.ps1  build-price-ddd-overrides.ps1  data.js  export.js  index.html  market-overrides.js  price-ddd-overrides.js  runtime-market-overrides.js
respiratorio/: build-data.ps1  data.js  export.js  index.html
scripts/: extract_from_html.py  ingest.py
(+140 files in other folders)
