[project]
name = "siegfried-bi-backend"
version = "0.1.0"
description = "Siegfried BI — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "openpyxl>=3.1.5",
    "typer>=0.15.0",
]
